--- a/index.html
+++ b/index.html
@@ -37,22 +37,14 @@
     </div>
 
     <!-- Formulario de respuesta -->
-        <table cellspacing="20"><tbody><tr><td><h2>RESPUESTA</h1>
+    <div class="response-section">
+        <h2>RESPUESTA</h2>
         <form id="answer-form">
-            <label for="name"><b>Tu keko:</b></label>
-            <input type="text" id="name" placeholder="Ingresa tu keko" required>
-
             <label for="answer"><b>Tu respuesta:</b></label>
             <input type="text" id="answer" placeholder="Ingresa tu respuesta" required>
-
             <button type="submit">Enviar respuesta</button>
             <p id="feedback"></p>
-        </form></td>
-
-        <td><div class="correct-answers">
-            <h2>LISTA DE ACERTADOS</h2>
-            <ul id="correct-list"></ul>
-        </div></td></tbody></table>
+        </form>
     </div>
 
     <script src="script.js"></script>
